<resources>
    <string name="app_name">FacebookChat</string>
    <string name="facebook_app_id">2062916980694686</string>
    <string name="facebook_login_protocol_scheme">fb2062916980694686</string>
    <string name="text_lorem_ipsum">Lorem ipsum</string>
    <string name="contentDescription">Content Description</string>


    <!--Confirm Phone-->
    <string name="confirm_phone_info">We will send an SMS message to verify your phone number. \nPlease, enter your phone number:</string>
    <string name="text_confirm_question">Confirm or you want to change the number?</string>
    <string name="text_message_confirm">Code will be sent to this number:</string>
    <string name="text_confirm_phone_number">+380 974938493</string>
    <string name="text_change">Change</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_enter_code_from_message">Enter code from message</string>
    <string name="text_hint_verify_code">_ _ _ _ _ _</string>
    <string name="text_resend">Resend</string>
    <string name="text_verify">Verify</string>
    <string name="text_update_gps">Update</string>
    <string name="text_update_google_play_services">Update Google Play Services\nand Try Again</string>

    <!--MPesa-->
    <string name="myMobileNumber">My Mobile Number</string>
    <string name="button_pay">Pay</string>
    <string name="text_kes_for_searches">1 View = 50 KES</string>
    <string name="text_amount_kes">Amount (KES)</string>
    <string name="text_number_of_views">Number of views</string>
    <string name="text_transaction_cancelled">Transaction cancelled.</string>
    <string name="text_message_transaction_was_cancelled">Your transaction was cancelled.</string>
    <string name="button_ok">OK</string>
    <string name="display_name">Name</string>
    <string name="settings_status">email</string>
    <string name="back_to_chat">Back to Chat</string>
    <string name="seen_recently">Seen recently</string>

</resources>
