<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mpesa_background">

        <LinearLayout
            android:id="@+id/mpesa_main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/contentDescription"
                    app:srcCompat="@drawable/m_pesa_logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textColor="@color/white_greyish"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/white_greyish" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/white_greyish" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/white_greyish" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/white_greyish" />

                <TextView
                    android:id="@+id/mpesa_text_price_of_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/text_kes_for_searches"
                    android:textColor="#DCDCDC"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/white_greyish" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/white_greyish" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/white_greyish" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/white_greyish" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mpesa_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/phone_number_wrap_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/phone_number_inner_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:baselineAligned="false"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/mobile_number_layout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_marginStart="5dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/mpesa_phone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@android:color/transparent"
                                android:digits="+0123456789"
                                android:drawableLeft="@drawable/ic_phone_white"
                                android:drawablePadding="8dp"
                                android:drawableStart="@drawable/ic_phone_white"
                                android:gravity="center_vertical"
                                android:hint="@string/myMobileNumber"
                                android:inputType="numberSigned|phone"
                                android:maxLength="20"
                                android:padding="10dp"
                                android:singleLine="true"
                                android:textColor="@color/white"
                                android:textColorHint="@color/white"
                                android:textSize="16sp" />

                            <View
                                android:layout_width="fill_parent"
                                android:layout_height="1px"
                                android:background="@color/white_greyish" />

                            <View
                                android:layout_width="fill_parent"
                                android:layout_height="1px"
                                android:background="@color/white_greyish" />

                            <EditText
                                android:id="@+id/mpesa_amount"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@android:color/transparent"
                                android:digits="0123456789"
                                android:drawableLeft="@drawable/ic_amount"
                                android:drawablePadding="8dp"
                                android:drawableStart="@drawable/ic_amount"
                                android:gravity="center_vertical"
                                android:hint="@string/text_amount_kes"
                                android:inputType="numberSigned"
                                android:maxLength="10"
                                android:padding="10dp"
                                android:singleLine="true"
                                android:textColor="@color/white"
                                android:textColorHint="@color/white"
                                android:textSize="16sp" />

                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/mpesa_pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="25dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_button_pay"
                    android:drawableLeft="@drawable/ic_pay"
                    android:drawableStart="@drawable/ic_pay"
                    android:drawablePadding="10dp"
                    android:enabled="false"
                    android:paddingEnd="30dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:paddingStart="30dp"
                    android:text="@string/button_pay"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/mpesa_pay_progress_bar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/mpesa_info_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mpesa_message_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/mpesa_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerInParent="false"-->
            <!--android:orientation="vertical">-->

            <!--<EditText-->
            <!--android:id="@+id/mpesa_phone"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="10dp"-->
            <!--android:hint="Your Phone Number"-->
            <!--android:inputType="phone" />-->

            <!--<EditText-->
            <!--android:id="@+id/mpesa_amount"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="10dp"-->
            <!--android:hint="Amount"-->
            <!--android:inputType="number"-->
            <!--android:text="1" />-->

            <!--<android.support.v7.widget.AppCompatButton-->
            <!--android:id="@+id/mpesa_pay"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="10dp"-->
            <!--android:enabled="false"-->
            <!--android:text="Pay" />-->

            <!--</LinearLayout>-->


        </LinearLayout>

        <LinearLayout
            android:id="@+id/mpesa_result_dialog_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/style_mpesa_dialog"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/mpesa_text_result_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/text_transaction_cancelled"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/mpesa_image_result"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/contentDescription"
                app:srcCompat="@drawable/icon_no_success" />

            <TextView
                android:id="@+id/mpesa_text_result_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/text_message_transaction_was_cancelled"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/mpesa_dialog_ok_button"
                android:layout_width="220dp"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/style_button_pay"
                android:paddingEnd="30dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingStart="30dp"
                android:text="@string/button_ok"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/mpesa_main_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

    </RelativeLayout>

</ScrollView>